--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
     
     <p class = "dnd"> Design and Development </p>
-    <p class = "dndp"> I started learning to code in HTML when I was in my grade 11
+    <p class = "dndp"> I started learning to code in HTML when I was in my grade 11 <br>
         because it is an assignment.
     </p>
 
