--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     
-    <div class = "picture1">
-        <img src = "images/city.webp" height="700">
+    <div class = "center-wrapper">
+
+    <div class = "banner">
+        <img src = "images/city.webp" >
     </div>
 
     <div class="picture2">
-        <img src = "images/icon-modified.png" height="200" >
+        <img src = "images/1000008862-modified.png" height="300" >
         
         <h1 class = "helloH"> Hello </h1>
         <p class = "helloP"> I am an IT student. I'm from Emilio Aguinlaldo College. I love coke</p>
@@ -59,7 +61,7 @@
     <br>
 
     <button>
-        Contact Me
+        <a href = "https://cwnte.github.io/Portfolio/" target = "_blank">Contact Me</a>
     </button>
 
     <br>
@@ -68,10 +70,13 @@
 
     <footer class = "footer">
         <div class = "footer-container">
-            <a> Facebook </a>
-            <a> Instagram </a>
-            <a> Website </a>
+            <a href = "https://www.facebook.com/share/1GB4LyAE3D/" target="_blank"> Facebook </a>
+            <a href = "https://www.instagram.com/cwnte_666?igsh=MXdubXlxcjdhdjRidA==" target="_blank"> Instagram </a>
+            <a href = "https://github.com/Cwnte" target="_blank"> Website </a>
         </div>
+
     </footer>
+
+    </div>
 </body>
 </html>
