--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <br>
 
     <p class = "dnd"> Learning HTML and CSS </p>
-    <p class = "dndp"> I started learning to code in HTML when I was in my grade 11 <br>
-        because it is an assignment.
+    <p class = "dndp"> learning html and css is much easier than learning java and <br>
+        other backend language
     </p>
 
     <div class = "eye1"> <img src="images/Scarlet_eyes_1999-modified.png" height="200"></div>
